# canadian-news-scraper

./: Cargo.toml  LICENSE  Readme.md
src/: errors.rs  lib.rs  news.rs  scraper.rs
src/scraper/: cbc.rs  ctv.rs  global_news.rs
