[package]
name = "canadian_news_scraper"
version = "0.1.0"
authors = ["jmattson4 <jacemattson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.10"
select = "0.5.0"
chrono = "*"
actix-rt = "*"
tokio = { version = "0.2", features = ["full"] }
tokio-test = "0.4.0"
