[package]
name = "canadian_news_scraper"
version = "0.1.3"
description = "A library that provides an api which scrapes 3 Canadian News Sites and returns the data."
license = "MIT"
authors = ["jmattson4 <jacemattson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sync = ["tokio"]

[dependencies]
reqwest = "0.10.10"
select = "0.5.0"
chrono = "0.4.19"
tokio = { version = "0.2", features = ["full"] }